// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.account;
option go_package = "github.com/bucketeer-io/bucketeer/proto/account";

import "proto/account/account.proto";
import "proto/account/api_key.proto";

message CreateAdminAccountCommand {
  string email = 1;
}

message EnableAdminAccountCommand {}

message DisableAdminAccountCommand {}

message ConvertAccountCommand {}

message DeleteAccountCommand {}

message CreateAccountCommand {
  string email = 1;
  account.Account.Role role = 2;
}

message ChangeAccountRoleCommand {
  account.Account.Role role = 1;
}

message EnableAccountCommand {}

message DisableAccountCommand {}

message CreateAPIKeyCommand {
  string name = 1;
  account.APIKey.Role role = 2;
}

message ChangeAPIKeyNameCommand {
  string name = 1;
}

message EnableAPIKeyCommand {}

message DisableAPIKeyCommand {}
